[tool.poetry]
name = "jwthenticator"
version = "0.0.0"   # For poetry-dynamic-versioning
description = "A cloud first service for key to JWT authentication library and server written in Python 3."
authors = ["Guy Zylberberg <guyzyl@gmail.com>", "Claroty Open Source <opensource@claroty.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/claroty/jwthenticator"
documentation = "https://github.com/claroty/jwthenticator"
exclude = ["jwthenticator/tests"]


[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = ">=2.0, < 2.1.0"
sqlalchemy-utils = ">=0.33.0, < 1.0.0"
pg8000 = "1.16.6"  # Constant due to -  https://github.com/tlocke/pg8000/issues/53
aiohttp = "^3.9.5"
pyjwt = ">= 1.7, < 3.0.0"
cryptography = ">=41.0.3, <= 43.0.4"  # Required for pyjwt
marshmallow = "^3.9"
marshmallow-dataclass = "^8.3"
pycryptodomex = "^3.9"
environs = "^9.3.1"
asyncpg = { version = "^0.28.0", markers = "platform_python_implementation == 'CPython'" } # pypy can not build asyncpg
aiosqlite = "^0.20.0"


[tool.poetry.dev-dependencies]
mypy = "^0.790"
pylint = "^2.6"
pytest = "^6.1"
pytest-asyncio = "^0.14"
pytest-aiohttp = "^0.3"
freezegun = "^1.0"
pyjwt = "^2.0"
diagrams = "^0.17.0"
mock = "^4.0.3"
async_generator = "^1.10"
aiofiles = "^0.7.0"
typing-inspect = "0.7.1" # https://github.com/lovasoa/marshmallow_dataclass/issues/206


[tool.poetry.group.dev.dependencies]
nest-asyncio = "^1.5.7"

[tool.pylint.message_control]
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "line-too-long",
]


[tool.pylint.typecheck]
ignored-classes = [
    "Session"
]


[tool.poetry-dynamic-versioning]
enable = true


[build-system]
requires = ["poetry>=1.0.2", "poetry-dynamic-versioning"]
build-backend = "poetry.masonry.api"
